src/sass/partials/_filter.scss
@import "mixins";

/* *************************************************
 * Status Filter Buttons
 ***************************************************/
#status-filter {
  margin-bottom: 20px;

  @include responsive(500px) {
    display: flex;
  }
}

#status-filter .filter-btn,
#status-filter .tab-btn {
  border: 1px solid #ccc;
  background-color: var(--light);
  color: #333;
  padding: 6px 12px;
  font-size: 0.8rem;
  text-transform: uppercase;
}
#status-filter .filter-btn.selected,
#status-filter .tab-btn.selected {
  background-color: var(--primary);
  color: #fff;
  position: relative;
  padding-left: 24px;
}

#status-filter .filter-btn.selected::before,
#status-filter .tab-btn.selected::before {
  font-family: "Material Symbols Outlined";
  content: "check";
  font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 48;
  font-size: 20px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
}

/* *************************************************
   * Search Filter 
   ***************************************************/

.filter-box-wrapper {
  background-color: #fff;
  width: 100%;
  margin: 0 0 1.7rem;
  position: sticky;
  top: 0;
  z-index: 99;
  -webkit-box-shadow: 0px 20px 20px 6px rgba(255, 255, 255, 0.8);
  -moz-box-shadow: 0px 20px 20px 6px rgba(255, 255, 255, 0.8);
  box-shadow: 0px 20px 20px 6px rgba(255, 255, 255, 0.8);
}

.filter-box {
  position: relative;
}
#map-search,
#route-search {
  width: 100%;
  font-size: 1.3em;
  font-size: 16px;
  height: 56px;
  background: #f4f4f4;
  border: 0;
  border-bottom: 1px solid #757575;
  border-radius: 0;
  margin: 0;
  padding: 20px;
  outline: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  position: relative;
  transition: all 0.2s ease-in-out;
}

#map-search:focus,
#route-search:focus {
  height: 60px;
  border-bottom: 4px solid #757575;
  margin: 0 0 -4px;
}

#search {
  margin-bottom: 20px;
}

#route-search-container {
  position: relative;
}

#clear-search {
  visibility: hidden;
  border: 0;
  position: absolute;
  right: 0;
  height: 100%;
  background-color: transparent;
}

#clear-search span {
  color: var(--primary);
}

#clear-search span:hover {
  color: var(--primary-hover);
}

#clear-search span:active {
  color: var(--primary-ghost-white);
}

/* *************************************************
   * Transit Type Filter 
   ***************************************************/
.type-filter {
  display: flex;
  margin-bottom: 20px;
}

.type-filter .alert-type-bttn {
  width: 23%;
  max-width: 125px;
  margin-right: 20px;
  padding: 10px 5px;
  font-size: 0.9em;
  border: 2px solid var(--primary);
  border-radius: 5px;
  background-color: #fff;
}

.type-filter .alert-type-bttn:hover,
.type-filter .alert-type-bttn:focus {
  box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
}

.type-filter .alert-type-bttn:active,
.type-filter .alert-type-bttn:state(selected),
.type-filter .alert-type-bttn.selected {
  background-color: var(--primary-light-background);
}

.type-filter .alert-type-bttn .material-symbols-outlined {
  font-size: 2em;
  pointer-events: none;
  border-radius: 50%;
  padding: 10px;
  margin-bottom: 10px;
  color: #fff;
}

.type-filter
  .alert-type-bttn[data-type="bus-alerts"]
  .material-symbols-outlined {
  background-color: var(--primary-ghost);
}

.type-filter
  .alert-type-bttn[data-type="rail-alerts"]
  .material-symbols-outlined {
  background-color: #2a7997;
  background-color: orange;
}

.type-filter
  .alert-type-bttn[data-type="water-taxi-alerts"]
  .material-symbols-outlined {
  background-color: #3bbdda;
}

.type-filter
  .alert-type-bttn[data-type="system-alerts"]
  .material-symbols-outlined {
  background-color: black;
}
.type-filter
  .alert-type-bttn[data-type="elevator-alerts"]
  .material-symbols-outlined {
  background-color: blue;
}

